double scrollbar fix

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+html {
+  overflow: hidden;
+  /* height: auto; */
+}
+
 .searchBar {
   height: 80px;
   background: rgb(255, 69, 0);
@@ -53,6 +58,7 @@ h1 {
   margin: 0 auto;
   padding: 15px;
   box-sizing: border-box;
+  height: 100%;
 }
 
 .post_container {
@@ -74,4 +80,11 @@ a {
 
 a:hover {
   color: rgb(255, 69, 0);
+}
+
+.list {
+  display: flex;
+  flex-direction: column;
+  overflow-y: scroll;
+  height: calc(100vh - 80px);
 }
